Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -1635,17 +1635,17 @@ John Wick:
 
 <ul>
      <li>
-<a href="https://tv.vitaforas.de/John1.mp4">
-<img src="https://tv.vitaforas.de/John1.png" alt="39" width="22%" height="auto"></a>
+<a href="https://123.vitaforas.de/John1.mp4">
+<img src="https://123.vitaforas.de/John1.png" alt="39" width="22%" height="auto"></a>
 
-     <a href="https://tv.vitaforas.de/john2.mp4">
-<img src="https://tv.vitaforas.de/John2.png" alt="40" width="22%" height="auto"></a>
+     <a href="https://123.vitaforas.de/john2.mp4">
+<img src="https://123.vitaforas.de/John2.png" alt="40" width="22%" height="auto"></a>
 
-     <a href="https://tv.vitaforas.de/john3.mp4">
-<img src="https://tv.vitaforas.de/john3.jpg" alt="41" width="22%" height="auto"></a>
+     <a href="https://123.vitaforas.de/john3.mp4">
+<img src="https://123.vitaforas.de/john3.jpg" alt="41" width="22%" height="auto"></a>
 
-     <a href="https://tv.vitaforas.de/John4.mp4">
-<img src="https://tv.vitaforas.de/John4.png" alt="42" width="22%" height="auto"></a></li>
+     <a href="https://123.vitaforas.de/John4.mp4">
+<img src="https://123.vitaforas.de/John4.png" alt="42" width="22%" height="auto"></a></li>
      </ul>
 
 
@@ -1662,26 +1662,26 @@ Sehen Sie Online Filme und Serien Kostenlos mit unserer App mit automatischer Ei
 
 Joko & Klaas:
 <ul>
-     <li><a href="https://tv.vitaforas.de/vr1.mp4">
-<img src="https://tv.vitaforas.de/vr1.jpg" alt="47" width="50" height="60"></a>
-     <a href="https://tv.vitaforas.de/vr2.mp4">
-<img src="https://tv.vitaforas.de/vr2.jpg" alt="48" width="50" height="60"></a>
-     <a href="https://tv.vitaforas.de/DasDach.mp4">
-<img src="https://tv.vitaforas.de/DasDach.jpg" alt="42" width="50" height="60"></a>
-     <a href="https://tv.vitaforas.de/prinzessin.mp4">
-<img src="https://tv.vitaforas.de/prinzessin.jpg" alt="52" width="50" height="60"></a>
-     <a href="https://tv.vitaforas.de/insel.mp4">
-<img src="https://tv.vitaforas.de/insel.jpg" alt="62" width="50" height="60"></a>
-     <a href="https://tv.vitaforas.de/zoo.mp4">
-<img src="https://tv.vitaforas.de/zoo.jpg" alt="41" width="50" height="60"></a>
-     <a href="https://tv.vitaforas.de/fluch.mp4">
-<img src="https://tv.vitaforas.de/fluch.jpg" alt="95" width="50" height="60"></a>
-     <a href="https://tv.vitaforas.de/kfz.mp4">
-<img src="https://tv.vitaforas.de/kfz.jpg" alt="104" width="50" height="60"></a>
-     <a href="https://tv.vitaforas.de/koch.mp4">
-<img src="https://tv.vitaforas.de/koch.jpg" alt="114" width="50" height="60"></a>
-     <a href="https://tv.vitaforas.de/spiele.mp4">
-<img src="https://tv.vitaforas.de/spiele.jpg" alt="142" width="50" height="60"></a></li>
+     <li><a href="https://123.vitaforas.de/vr1.mp4">
+<img src="https://123.vitaforas.de/vr1.jpg" alt="47" width="50" height="60"></a>
+     <a href="https://123.vitaforas.de/vr2.mp4">
+<img src="https://123.vitaforas.de/vr2.jpg" alt="48" width="50" height="60"></a>
+     <a href="https://123.vitaforas.de/DasDach.mp4">
+<img src="https://123.vitaforas.de/DasDach.jpg" alt="42" width="50" height="60"></a>
+     <a href="https://123.vitaforas.de/prinzessin.mp4">
+<img src="https://123.vitaforas.de/prinzessin.jpg" alt="52" width="50" height="60"></a>
+     <a href="https://123.vitaforas.de/insel.mp4">
+<img src="https://123.vitaforas.de/insel.jpg" alt="62" width="50" height="60"></a>
+     <a href="https://123.vitaforas.de/zoo.mp4">
+<img src="https://123.vitaforas.de/zoo.jpg" alt="41" width="50" height="60"></a>
+     <a href="https://123.vitaforas.de/fluch.mp4">
+<img src="https://123.vitaforas.de/fluch.jpg" alt="95" width="50" height="60"></a>
+     <a href="https://123.vitaforas.de/kfz.mp4">
+<img src="https://123.vitaforas.de/kfz.jpg" alt="104" width="50" height="60"></a>
+     <a href="https://123.vitaforas.de/koch.mp4">
+<img src="https://123.vitaforas.de/koch.jpg" alt="114" width="50" height="60"></a>
+     <a href="https://123.vitaforas.de/spiele.mp4">
+<img src="https://123.vitaforas.de/spiele.jpg" alt="142" width="50" height="60"></a></li>
      </ul>
 
 
@@ -1701,17 +1701,17 @@ Maze Runner:
 
 <ul>
      <li> 
-<a href="https://tv.vitaforas.de/maze.mp4">
-<img src="https://tv.vitaforas.de/mazerunner.jpg" alt="9910" width="31%" height="auto"></a>
+<a href="https://123.vitaforas.de/maze.mp4">
+<img src="https://123.vitaforas.de/mazerunner.jpg" alt="9910" width="31%" height="auto"></a>
 
 
-<a href="https://tv.vitaforas.de/maze2.mp4">
-<img src="https://tv.vitaforas.de/maze2.jpg" alt="7" width="31%" height="auto"></a>
+<a href="https://123.vitaforas.de/maze2.mp4">
+<img src="https://123.vitaforas.de/maze2.jpg" alt="7" width="31%" height="auto"></a>
 
 
 
-<a href="https://tv.vitaforas.de/maze3.mp4"> 
-<img src="https://tv.vitaforas.de/maze3.jpg" alt="7" width="31%" height="auto"></a>
+<a href="https://123.vitaforas.de/maze3.mp4"> 
+<img src="https://123.vitaforas.de/maze3.jpg" alt="7" width="31%" height="auto"></a>
 </li>
      </ul>
 
