Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -877,8 +877,8 @@ Musik
 <img src="https://tv.vitaforas.de/here.jpg" alt="2" width="100%" height="auto"></a>
 
 Musik
-     <a href="https://tv.vitaforas.de/solas.mp4">
-<img src="https://tv.vitaforas.de/solas.jpg" alt="2" width="100%" height="auto"></a>
+     <a href="https://123.vitaforas.de/solas.mp4">
+<img src="https://123.vitaforas.de/solas.jpg" alt="2" width="100%" height="auto"></a>
 
 Musik
 
@@ -887,8 +887,8 @@ Musik
  <p>         
 </p>
 
-<a href="https://tv.vitaforas.de/maze.mp4">
-<img src="https://tv.vitaforas.de/mazerunner.jpg" alt="9910" width="100%" height="auto"></a>
+<a href="https://123.vitaforas.de/maze.mp4">
+<img src="https://123.vitaforas.de/mazerunner.jpg" alt="9910" width="100%" height="auto"></a>
 
 Eines Tages wacht Thomas (Dylan O'Brien) in einem Aufzug auf, aber das einzige, woran er sich erinnern kann, ist sein Vorname. Seine gesamten restlichen Erinnerungen sind verschwunden. Er stellt fest, dass er nicht allein ist: Als sich die Aufzugtür öffnet, strömen weitere Teenager-Jungs auf ihn zu und begrüßen ihn. Der Ort, an dem er angekommen ist, nennt sich „die Lichtung“ und wird von einer großen Steinwand umschlossen. Genau wie Thomas wissen auch die anderen nicht, warum sie dort sind und wie sie dorthin gelangt sind. Sie wissen nur, dass sich jeden Tag große Türen in der Steinwand zu einem Irrgarten öffnen, der hinter den Mauern liegt. Nachts schließen sich die Türen wieder und alle 30 Tage wird ein neuer Jugendlicher mit dem Aufzug gebracht. Das ist zunächst alles, was Thomas in Erfahrung bringen kann. Als eines Tages ein Mädchen (Kaya Scodelario) den mysteriösen Ort erreicht, ist dies eine Sensation, denn sie ist das erste weibliche Mitglied der aus 60 Personen bestehenden Gruppe. Jeder einzelne hat eine bestimmte Aufgabe - einige werden ausgewählt, durch das Labyrinth zu laufen und den Verlauf der Mauern aufzuzeichnen. Doch im Irrgarten scheinen sie nicht allein zu sein...
 
@@ -896,16 +896,16 @@ Eines Tages wacht Thomas (Dylan O'Brien) in einem Aufzug auf, aber das einzige, 
  <p>         
 </p>
 
-<li><a href="https://tv.vitaforas.de/maze2.mp4">
-<img src="https://tv.vitaforas.de/maze2.jpg" alt="7" width="100%" height="auto"></a>
+<li><a href="https://123.vitaforas.de/maze2.mp4">
+<img src="https://123.vitaforas.de/maze2.jpg" alt="7" width="100%" height="auto"></a>
 
 Thomas und seine Mitstreiter sind dem Labyrinth entkommen und stellen mit Schrecken fest, dass die Erde in Schutt und Asche liegt und durch starke Sonneneinstrahlungen verwüstet wurde. Zunächst werden die jungen Helden in einem Wohnheim untergebracht, wo sie fürs Erste in Sicherheit sind. Doch nach kurzer Zeit entdecken Thomas und seine Mitstreiter Leichen, die von der Decke hängen und darüber hinaus werden sie von den sogenannten „Cranks“ bedroht. Später finden sie heraus, dass ihre Mitstreiterin Teresa verschwunden ist. Gemeinsam mit seinen Freunden Minho und Newt versucht Thomas die verschwundene Teresa zu finden, wobei sie zahlreichen Gefahren trotzen müssen und sich schließlich dem finsteren Janson stellen müssen...
 
  <p>         
 </p>
 
-<li><a href="https://tv.vitaforas.de/maze3.mp4"> 
-<img src="https://tv.vitaforas.de/maze3.jpg" alt="7" width="100%" height="auto"></a>
+<li><a href="https://123.vitaforas.de/maze3.mp4"> 
+<img src="https://123.vitaforas.de/maze3.jpg" alt="7" width="100%" height="auto"></a>
 
 Nachdem Thomas dem Labyrinth entkommen ist und die Brandwüste durchquert hat, sind die Abenteuer für ihn und seine Freunde noch längst nicht ausgestanden. Ein Jahr ist vergangen. Inzwischen haben er, Newt, Minho und Teresa so einiges in Erfahrung gebracht. Sie wissen nun, dass sie Teil eines groß angelegten Experiments waren, mit dem die Organisation Wicked ein Heilmittel für die weltweit ausgebrochene Seuche namens "Der Brand" finden wollte, die Menschen in tollwütige Bestien verwandelt. Thomas gehört zu den wenigen Personen, die gegen den letztendlich tödlich endenden Virus immun sind, und so fällt es nun ihm zu, den Verfall der Menschheit aufzuhalten.
 
@@ -929,29 +929,29 @@ Nachdem Thomas dem Labyrinth entkommen ist und die Brandwüste durchquert hat, s
 
  <p>         
 </p>
-     <a href="https://tv.vitaforas.de/fire.mp4">
-<img src="https://tv.vitaforas.de/fire.jpg" alt="14" width="100%" height="auto"></a>
+     <a href="https://123.vitaforas.de/fire.mp4">
+<img src="https://123.vitaforas.de/fire.jpg" alt="14" width="100%" height="auto"></a>
 
  <p>         
 </p>
-     <a href="https://tv.vitaforas.de/inside.mp4">
-<img src="https://tv.vitaforas.de/inside.jpg" alt="24" width="100%" height="auto"></a>
+     <a href="https://123.vitaforas.de/inside.mp4">
+<img src="https://123.vitaforas.de/inside.jpg" alt="24" width="100%" height="auto"></a>
 
  <p>         
 </p>
-     <a href="https://tv.vitaforas.de/Gunpowder_Milkshake_(2021)_English.mp4">
-<img src="https://tv.vitaforas.de/bildname5.jpg" alt="21" width="100%" height="auto"></a>
+     <a href="https://123.vitaforas.de/Gunpowder_Milkshake_(2021)_English.mp4">
+<img src="https://123.vitaforas.de/bildname5.jpg" alt="21" width="100%" height="auto"></a>
 
  <p>         
 </p>
-     <a href="https://tv.vitaforas.de/influ.mp4">
-<img src="https://tv.vitaforas.de/influ.jpg" alt="15" width="100%" height="auto"></a>
+     <a href="https://123.vitaforas.de/influ.mp4">
+<img src="https://123.vitaforas.de/influ.jpg" alt="15" width="100%" height="auto"></a>
 
 
  <p>         
 </p>
-     <a href="https://tv.vitaforas.de/anhalter.mp4">
-<img src="https://tv.vitaforas.de/anhalter.jpg" alt="16" width="100%" height="auto"></a>
+     <a href="https://123.vitaforas.de/anhalter.mp4">
+<img src="https://123.vitaforas.de/anhalter.jpg" alt="16" width="100%" height="auto"></a>
 
 Per Anhalter durch die Galaxis (2005 ‧ Sci-Fi/Komödie)
  <p>         
@@ -961,40 +961,40 @@ Weit draußen in der Öde der Galaxis kreist eine gelbe Sonne um einen unbedeute
 
  <p>         
 </p>
-     <a href="https://tv.vitaforas.de/panem.mp4">
-<img src="https://tv.vitaforas.de/panem.jpg" alt="17" width="100%" height="auto"></a>
+     <a href="https://123.vitaforas.de/panem.mp4">
+<img src="https://123.vitaforas.de/panem.jpg" alt="17" width="100%" height="auto"></a>
 
  <p>         
 </p>
-     <a href="https://tv.vitaforas.de/tribut.mp4">
-<img src="https://tv.vitaforas.de/tribut.jpg" alt="18" width="100%" height="auto"></a></li>
+     <a href="https://123.vitaforas.de/tribut.mp4">
+<img src="https://123.vitaforas.de/tribut.jpg" alt="18" width="100%" height="auto"></a></li>
 
 
  <p>         
 </p>     
-     <a href="https://tv.vitaforas.de/fut.mp4">
-<img src="https://tv.vitaforas.de/fut.jpg" alt="26" width="50" height="60"></a>
+     <a href="https://123.vitaforas.de/fut.mp4">
+<img src="https://123.vitaforas.de/fut.jpg" alt="26" width="50" height="60"></a>
 Serie: Futurama 
  <p>         
 </p>         
-     <a href="https://tv.vitaforas.de/f.mp4">
-<img src="https://tv.vitaforas.de/f.jpg" alt="2" width="50" height="60"></a>
+     <a href="https://123.vitaforas.de/f.mp4">
+<img src="https://123.vitaforas.de/f.jpg" alt="2" width="50" height="60"></a>
 
 Serie: Futurama 
  <p>         
 </p>         
-     <a href="https://tv.vitaforas.de/here.mp4">
-<img src="https://tv.vitaforas.de/here.jpg" alt="2" width="50" height="60"></a>
+     <a href="https://123.vitaforas.de/here.mp4">
+<img src="https://123.vitaforas.de/here.jpg" alt="2" width="50" height="60"></a>
 Musik
  <p>         
 </p>         
-     <a href="https://tv.vitaforas.de/solas.mp4">
-<img src="https://tv.vitaforas.de/solas.jpg" alt="2" width="50" height="60"></a>
+     <a href="https://123.vitaforas.de/solas.mp4">
+<img src="https://123.vitaforas.de/solas.jpg" alt="2" width="50" height="60"></a>
 Musik
  <p>         
 </p>         
-     <a href="https://tv.vitaforas.de/video3.mp4">
-<img src="https://tv.vitaforas.de/bildname1.jpg" alt="1" width="50" height="60"></a>
+     <a href="https://123.vitaforas.de/video3.mp4">
+<img src="https://123.vitaforas.de/bildname1.jpg" alt="1" width="50" height="60"></a>
 
 <p>         
 </p>         
@@ -1002,6 +1002,12 @@ Musik
      <a href="https://zero.vitaforas.de/mnt/ssd/ghost.mp4">
 <img src="https://zero.vitaforas.de/mnt/ssd/ghost.jpg" alt="26" width="100%" height="auto"></a>
 
+
+<p>         
+</p>         
+
+     <a href="https://123.vitaforas.de/ghost.mp4">
+<img src="https://123.vitaforas.de/ghost.jpg" alt="26" width="100%" height="auto"></a>
 
 <p>         
 </p>         
@@ -1027,7 +1033,7 @@ Musik
 <p>         
 </p>         
 Test:
-     <a href="https://zero.vitaforas.de/mnt/samba/ghost.mp4">
+     <a href="https:/zero.vitaforas.de/mnt/samba/ghost.mp4">
 <img src="https://zero.vitaforas.de/mnt/samba/ghost.jpg" alt="26" width="100%" height="auto"></a>
 
 In der heruntergekommenen Grenzstadt Samurai Town wird der Bankräuber Hero (Nicolas Cage) vom wohlhabenden Gouverneur (Bill Moseley) aus dem Gefängnis geholt, weil dessen Adoptiv-Enkelin Bernice (Sofia Boutella) verschwunden ist. Der Gouverneur bietet dem Gefangenen seine Freiheit an, wenn er die Ausreißerin wiederfindet. In einen Lederanzug gekleidet, der mit zahlreichen Sprengsätzen ausgestattet ist, damit der Retter nicht auf falsche Gedanken kommt, und sich innerhalb von fünf Tagen selbst zerstört, macht sich der Namenlose auf die Suche nach der jungen Frau, in das sogenannte Ghostland, eine postapokalyptische Einöde, die das Samurai Town umgibt. Tatsächlich findet der Held Bernice schnell, doch kann er mit ihr entkommen, bevor ihn die Bewohner des Ghostland schnappen oder er in die Luft gejagt wird?
