Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -1384,7 +1384,7 @@ YouTube Playlist 👇🏼
                                                 <!-- About -->
                                                         <article id="about">
                                                                 <h2 class="major">FSK 18</h2>
-                                                                  <span class="image main"><img src="https://tv.vitaforas.de/1.jpg" alt="" /></span>
+                                                                  <span class="image main"><img src="https://123.vitaforas.de/1.jpg" alt="" /></span>
 
        <p>
 
