Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -1140,7 +1140,7 @@ video.play();
                                                         <article id="work">
                                                                 <h2 class="major">FSK 0</h2>
  
-                                                              <span class="image main"><img src="https://tv.vitaforas.de/1.jpg" alt="" /></span>
+                                                              <span class="image main"><img src="https://123.vitaforas.de/1.jpg" alt="" /></span>
 
 
        <p>
