Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -1289,7 +1289,7 @@ Zwei Filme lang waren Poppy und Branch unzertrennlich. In «Trolls – Gemeinsam
 </p>
 
 <a href="http://123.vitaforas.de/arielle.mp4">
-<img src="http://123.vitaforas.de/arielle.jpg" alt="1" width="100%" height="auto"></a>
+<img src="http://123.vitaforas.de/Arielle.jpg" alt="1" width="100%" height="auto"></a>
 
 2023: Die Meerjungfrau Arielle (Halle Bailey) ist die Lieblingstochter von König Triton (Javier Bardem), aber auch der eigensinnigste Spross des Herrschers. Immer wieder bricht das junge Mädchen mit der schönen Stimme die Regeln und nähert sich der Welt der Menschen, was in Tritons Reich unter dem Meer streng verboten ist. Ihre Sammlung von Gegenständen, die von den Menschen stammen und sie auf dem Meeresboden gefunden hat, machen sie nur noch neugieriger. Als ein Schiff in Seenot gerät, rettet sie den Prinzen Eric (Jonah Andre Hauer-King) vor dem Ertrinken und verliebt sich in ihn. Auch er verliebt sich in sie, vor allem in ihre zauberhafte Stimme. Damit die beiden eine Zukunft haben, muss Arielle aber an Land. Sie bittet die Meereshexe Ursula (Melissa McCarthy), ihr Beine zu geben. Diese stimmt zu, will aber als Pfand Arielles Stimme. Da Eric Arielle ohne ihre schöne Stimme nicht erkennt, wird sie mit der wohl wichtigsten Entscheidung in ihrem Leben konfrontiert.
  <p>         
