Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -1147,6 +1147,16 @@ video.play();
 </p>
      🎥 Watch @ StreamTV 🎬
 
+
+ <p>         
+</p>
+
+<a href="http://123.vitaforas.de/sereia.mp4">
+<img src="http://123.vitaforas.de/sereia.jpg" alt="13" width="100%" height="auto"></a>
+
+Sereia (Stimme im englischsprachigen Original: Sonya Krueger) ist eine Meerjungfrauen-Prinzessin. Immer wieder erzählen ihre Schwestern ihr Geschichten über das wunderbare Leben, das die Menschen an Land führen. Auch von dem angeblich ebenso attraktiven wie charmanten Menschenprinzen Lucas (Courage) hat sie dabei oft gehört. Dass sie ihm eines Tages begegnen und ihn sogar vor dem Ertrinken retten würde, hätte Sereia sich nie träumen lassen. Als es dann doch passiert, verliebt sie sich auf der Stelle. In ihrer Sehnsucht nach Lucas wendet sich die Prinzessin an die Meereshexe Revina (Dee Wallace), die ihr ein Angebot macht: Für ein Jahr gibt sie Sereia eine menschliche Gestalt, in der sie versuchen kann, Lucas' Herz zu gewinnen. Der Preis für diesen Gefallen ist allerdings hoch. Denn sollte es ihr nicht gelingen, wird sie ihre Stimme verlieren und in die Verbannung schwimmen müssen. Doch Sereia ist bereit, das Wagnis einzugehen. Begleitet von ihrem besten Freund, der Schildkröte Sheldon (Alex Lizotte), verlässt sie erstmals ihre Unterwasserwelt und geht an Land …
+
+Der Film basiert auf dem Märchen „Die kleine Meerjungfrau“ von Hans Christian Andersen.
  <p>         
 </p>
 
