Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -1342,7 +1342,7 @@ Das Waisenmädchen Momo lebt allein mit seiner Schildkröte Kassiopeia in einem 
 <p>         
 </p>
      <a href="https://123.vitaforas.de/tiger.mp4">
-<img src="https://123.vitaforas.de/tiger.jpg" alt="10" width="100%" height="auto"></a>
+<img src="https://123.vitaforas.de/tiger1.jpg" alt="10" width="100%" height="auto"></a>
 
 Der chinesisch-amerikanische Junge Tom Hoo (Stimme im Original: Brandon Soo) wächst in San Francisco unter der Obhut seiner exzentrischen Großmutter, Frau Lee (Michelle Yeoh), auf – sie ist es auch, die ihn in die Welt chinesischer Magie einführt. Als es jedoch zu einem verheerenden Monsterangriff kommt, gelingt es ihr zwar, ihren Enkel zu beschützen, verliert dabei allerdings selbst ihr Leben. Schließlich nimmt Mr. Hu (Henry Golding), ein sprechender Tiger und einstiger Lehrling von Frau Lee, Tom unter seine Fittiche. Im folgenden vermischt sich die alte, chinesische Mythologie mit dem heutigen San Francisco, während Tom immer mehr über die magische Welt lernt und auf sein mächtiges Erbe als magischer Beschützer vorbereitet wird. Auf ihrem Weg treffen sie eine Reihe von Tieren, die jeweils ein anderes Zeichen des chinesischen Tierkreises repräsentieren und sich in eine menschliche Gestalt verwandeln könne, ohne dabei ihre tierischen Eigenschaften zu verlieren. Schaffen es Tom und Mr. Hu die entfremdeten Ti
  
