Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -74,6 +74,18 @@ Klick Hier
 Ray Waller (Wyatt Russell) leidet an multipler Sklerose und muss zugunsten seiner Gesundheit seine Baseballkarriere an den Nagel hängen. Um diesen Schritt leichter für alle Beteiligten, inklusive seiner Familie zu machen, soll ein Tapetenwechsel her. Also suchen die Wallers nach einem neuen Haus. Die Entscheidung fällt auf ein Heim mit eigenem Pool im Hintergarten, denn in diesem – so die Hoffnung der Familie – kann Ray auch gleich sein Reha-Programm absolvieren und wieder auf die Beine kommen. Und auch die Kinder Izzy (Amélie Hoeferle) und Elliot (Gavin Warren) finden Gefallen am kühlen Nass. Doch nach einiger Zeit häufen sich die mysteriösen Vorkommnisse. Erst verschwindet die Familienkatze spurlos und dann machen sowohl Izzy als auch Elliot merkwürdige Erfahrungen im Pool. Zudem scheint sich Ray erstaunlich schnell von seiner Krankheit zu erholen, denn schlagartig ist er so fit wie noch nie zuvor in seinem Leben. Auch wenn seine Frau Eve (Kerry Condon) noch nichts davon weiß – Ray hat dem Profisport wohl doch noch nicht endgültig den Rücken gekehrt haben und will zurück zum Baseball. Doch das ist nicht das, was die Familienidylle bedroht. Denn im Pool lauert etwas Böses, das langsam von Ray Besitz ergreift...
 
 
+
+ <p>
+</p>     
+
+Jetzt Streamen [[Beekeeper]] / Watch NOW! :
+
+<a href="https://123.vitaforas.de/BEE.mp4">
+<img src="https://123.vitaforas.de/bee.jpg" alt="1" width="100%" height="auto"></a>
+ 
+ Beekeeper (2024 ‧ Action/Thriller)
+
+In einer friedlichen ländlichen Gegend lebt ein Mann, der sich scheinbar ganz der Imkerei verschrieben hat. Doch hinter dieser Fassade verbirgt sich ein ehemaliger Agent einer geheimen und mächtigen Organisation. Als seine Nachbarin durch einen Telefonbetrug um ihr gesamtes Erspartes gebracht und in den Selbstmord getrieben wird, startet er einen gnadenlosen Rachefeldzug, der schließlich nationale Ausmaße annimmt. 
  <p>
 </p> 
 __________
@@ -103,17 +115,6 @@ Bester Browser 👇🏼 Alternativ 👇🏼
 <a href="https://t.ly/-U5ed"> <img src="https://123.vitaforas.de/TVbanner.jpg" alt="2" width="100%" height="auto"></a>
 </p>  
 __________
-
- <p>
-</p>     
-
-Jetzt Streamen [[Beekeeper]] / Watch NOW! :
-
-<a href="https://123.vitaforas.de/bee.mp4">
-<img src="https://123.vitaforas.de/bee.jpg" alt="1" width="100%" height="auto"></a>
- 
- In "The Beekeeper" schlüpft Jason Statham in die Rolle eines unscheinbaren Bienenzüchter. In "The Beekeeper" zeigt sich Jason Statham mal wieder von seiner feinsten Seite.
-Jason Statham als unscheinbarer Imker mit Kampfqualitäten
 
 <p>         
 </p>   
