Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -1358,7 +1358,7 @@ Der chinesisch-amerikanische Junge Tom Hoo (Stimme im Original: Brandon Soo) wä
  <p>         
 </p>
      <a href="https://123.vitaforas.de/ninja.mp4">
-<img src="https://123.vitaforas.de/ninja.jpg" alt="1" width="100%" height="auto"></a>
+<img src="https://123.vitaforas.de/turtle1.jpg" alt="1" width="100%" height="auto"></a>
 
 2023: Die Turtle-Brüder versuchen, sich die Liebe von New York City zu verdienen, während sie sich einer Armee von Mutanten entgegenstellen.
 
