Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -171,6 +171,15 @@ Es ist eine Zeit des Umbruchs: Im Chaos der Französischen Revolution verlieren 
 <img src="https://123.vitaforas.de/kinder.jpg" alt="26" width="100%" height="auto"></a>
 
 Seit frühester Kindheit hört Jacob von seinem Großvater Abraham immer wieder wundervolle und fantasiereiche Geschichten von einer Insel, auf der er sich vor Monstern versteckte und mit Kindern lebte, die alle außergewöhnliche Fähigkeiten besaßen. Als kleiner Junge liebt Jacob diese Geschichten, die er für bare Münze nimmt, später glaubt er seinem Opa jedoch kein Wort mehr. Als der Junge 16 ist, stirbt sein Großvater, scheinbar zerfleischt von einem wilden Tier. Doch Jacob meint, etwas anderes gesehen zu haben und wird neugierig: Er ringt seinen Eltern die Erlaubnis ab, zu der Insel zu reisen, auf der sein Opa zur Zeit des Zweiten Weltkrieges in einem Waisenhaus wohnte. Das alte Haus in Großbritannien ist längst eine verlassene Ruine, doch Jacob findet Anhaltspunkte dafür, dass die "besonderen Kinder" aus Abrahams Geschichten noch leben, gut behütet von der resoluten Miss Peregrine – aber die Gefahr, die Abraham das Leben kostete, ist noch immer nicht gebannt...
+
+
+<p>         
+</p>   
+
+ <a href="https://123.vitaforas.de/wendell.mp4">
+<img src="https://123.vitaforas.de/wendell.jpg" alt="26" width="100%" height="auto"></a>
+
+Die Dämonenbrüder Wendell (Stimme im Original: Jordan Peele) und Wild Sanders (Keegan Michael Key) sind aus der Unterwelt entkommen. Durch eine unglückliche Beschwörung der jungen Dämonenjägerin Kat (Lyric Ross) gelangen die Brüder in die Menschenwelt, wo sie jedoch nicht mit offenen Armen empfangen werden. Bald müssen Wendell und Wild jedoch feststellen, dass ihr Upgrade in die Welt der Lebenden keine bedingungslose Nettigkeit war. Kat verlangt von den Dämonen einen Ausgleich, der den Beginn eines aberwitzigen Abenteuers markieren wird.
 <p>         
 </p>   
 
