Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -212,6 +212,13 @@ Nach einem langen, anstrengenden Drehtag bei der Produktion ihres neuesten Horro
 
 <p>         
 </p>   
+  <a href="https://123.vitaforas.de/diecroods.mp4">
+<img src="https://123.vitaforas.de/diecroods.jpg" alt="26" width="100%" height="auto"></a>
+
+Wer kennt nicht das Höhlengleichnis nach Platon, in dem die Menschen in einer Höhle leben und die Schatten an der Wand für die Wirklichkeit halten? Nicht wesentlich anders geht es den Mitgliedern der Familie von Die Croods. Das Oberhaupt dieser prähistorischen Familie, Grug, trägt nachhaltig dafür Sorge, dass auch alle ja in der Höhle bleiben, sehr zum Verdruss von Sprössling Eep. Sie ist der Überzeugung, dass es mehr in ihrem Leben geben muss, als die sattsam bekannten vier Wände. Als sie sich eines Tages aus der Höhle stiehlt, bekommt sie einen Eindruck davon, den sie wenig später mit ihrer ganzen Familie teilen kann, als ein Erdrutsch die Höhle zerstört. Gerade so mit dem einen Leben davon gekommen, eröffnet sich den Croods auf der Suche nach einer neuen Heimat nun ein völlig neues Leben: voller Farbe, gefährlichen Abenteuern und – Erkenntnisgewinn.
+
+<p>         
+</p>   
   <a href="https://123.vitaforas.de/creator.mp4">
 <img src="https://123.vitaforas.de/creator.jpg" alt="26" width="100%" height="auto"></a>
 
