Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -138,6 +138,16 @@ Wie geht es weiter für den Master Chief John-117 (Pablo Schreiber) und sein Tea
 
 <p>         
 </p>   
+ <a href="https://123.vitaforas.de/upgrade.mp4">
+<img src="https://123.vitaforas.de/upgrade.jpg" alt="26" width="100%" height="auto"></a>
+
+Upgrade(2018)
+ Filme  Action  Horror  Science-Fiction  Thriller
+In einer von technologischen Errungenschaften dominierten Welt der nahen Zukunft lässt sich ein technikfeindlicher Mann (Logan Marshall-Green) nach dem Mord an seiner Frau und einem Unfall, der ihn gelähmt zurückließ, darauf ein, sich einen experimentellen Chip einpflanzen zu lassen, der ihm dabei behilflich sein soll, Rache für das zu üben, was ihm widerfahren ist.
+
+A brutal mugging leaves Grey Trace paralyzed in the hospital and his beloved wife dead. A billionaire inventor soon offers Trace a cure — an artificial intelligence implant called STEM that will enhance his body. Now able to walk, Grey finds that he also has superhuman strength and agility — skills he uses to seek revenge against the thugs who destroyed his life.
+<p>         
+</p>   
  <a href="https://123.vitaforas.de/haus.mp4">
 <img src="https://123.vitaforas.de/haus.jpg" alt="26" width="100%" height="auto"></a>
 
