Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@ Wie geht es weiter für den Master Chief John-117 (Pablo Schreiber) und sein Tea
 <p>         
 </p>   
  <a href="https://123.vitaforas.de/upgrade.mp4">
-<img src="https://123.vitaforas.de/upgrade.jpg" alt="26" width="100%" height="auto"></a>
+<img src="https://123.vitaforas.de/upgrade.png" alt="26" width="100%" height="auto"></a>
 
 Upgrade(2018)
  Filme  Action  Horror  Science-Fiction  Thriller
