Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -1473,9 +1473,16 @@ YouTube Playlist 👇🏼
 
 🛡️ Cloud Streaming @ StreamTV ☁️
 
+<p>
+        </p>
+<a href="http://123.vitaforas.de/mice.mp4">
+<img src="http://123.vitaforas.de/mice.jpg" alt="4" width="100%" height="auto"></a>
 
-</p>
-        <p>
+Die junge Abi (May Kelly) ist stocksauer auf ihre Mutter Jude (Lynne O'Sullivan) und ihren Vater Keith (Keith Eyles). Denn die sind wegen des massiven Drogenkonsums ihrer Tochter stark besorgt und haben beschlossen, endlich etwas zu unternehmen. Da Abi nicht auf sie hört und offenbar auch gar nicht merkt, dass sie ein Problem hat, haben die Eltern die professionelle Drogenberaterin Cara (Helen Fullerton) engagiert. Die schlägt der Familie vor, eine Intervention in einer abgelegenen Waldhütte abzuhalten. Gemeinsam mit Abis Bruder Mark (Karl Hughes) und ihrer besten Freundin Lara (Lila Lasso) machen sich alle auf den Weg in den Wald. Kaum eingetroffen, taucht dort allerdings plötzlich ein Trio von Mensch-Maus-Hybriden auf, die in einem stillgelegten Geheimlabor entwickelt wurden, und greift die darauf komplett unvorbereiteten Neuankömmlinge an …
+
+Der Film ist inspiriert vom gleichnamigen, englischen Kinderreim aus dem Jahre 1609, verfasst von Thomas Ravenscroft.
+<p>
+        </p>
 <a href="http://123.vitaforas.de/gold.mp4">
 <img src="http://123.vitaforas.de/gold.jpg" alt="4" width="100%" height="auto"></a>
 The Goldsmith (2022 ‧ Horror/Suspense)
