Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -1497,6 +1497,12 @@ Brian Godlock (Joel Kinnaman) muss mit ansehen, wie sein kleiner Sohn an Heiliga
 
 <p>         
 </p>   
+ <a href="https://123.vitaforas.de/smile.mp4">
+<img src="https://123.vitaforas.de/smile.jpg" alt="26" width="100%" height="auto"></a>
+
+Die Psychiaterin Dr. Rose Cotter (Sosie Bacon) musste den grausamen Selbstmord ihrer Patientin mitansehen. Als wäre diese Tatsache allein nicht schon traumatisierend genug, erlebt die junge Frau nach diesem Ereignis immer wieder unheimliche Dinge, die sich einfach nicht erklären lassen. Überall sieht sie plötzlich Menschen, die sie mit einem ganz und gar angsteinflößenden Lächeln anschauen. Niemand außer ihr scheint dieses Phänomen sonst zu bemerken. Verfällt Rose langsam dem Wahnsinn Bei ihren Nachforschungen stößt die Psychiaterin auf weitere Opfer, die fast alle nicht mehr als eine Woche überlebt haben, nachdem sie das Grinsen gesehen haben. Die Uhr läuft immer stärker gegen Rose und mehr und mehr ist sie der Überzeugung, dass ein Fluch auf ihr lastet, den sie nur besiegen kann, wenn sie sich weit zurück in ihre eigene Vergangenheit begibt...
+<p>         
+</p>   
  <a href="https://123.vitaforas.de/Jackpot.mp4">
 <img src="https://123.vitaforas.de/jackpot.jpg" alt="26" width="100%" height="auto"></a>
 
