Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -1501,6 +1501,13 @@ Drei Kriminelle, die seit ihrer Kindheit befreundet sind, glauben, das perfekte 
 
 Brian Godlock (Joel Kinnaman) muss mit ansehen, wie sein kleiner Sohn an Heiligabend in das Kreuzfeuer einer Gang gerät und stirbt. Dabei wird er selbst schwer verletzt und seiner Stimme beraubt. Rache wird nun zu seiner einzigen Mission und er beginnt dafür ein hartes Training. Godlock ist bereit, alles zu riskieren, um den Tod seines Sohnes zu vergelten
 
+
+<p>         
+</p>   
+ <a href="https://123.vitaforas.de/cutterhead.mp4">
+<img src="https://123.vitaforas.de/cutterhead.jpg" alt="26" width="100%" height="auto"></a>
+
+Im Auftrag ihrer Firma soll Rie (Christine Sønderris) die Bohrungen eines U-Bahntunnels unter der dänischen Hauptstadt inspizieren. Als es allerdings zu einem Zwischenfall kommt, ist sie plötzlich gemeinsam mit den Arbeitern Ivo (Kresimir Mikic) und Bharan (Samson Semere) in einer Luftschleuse eingesperrt. Während die Spannungen zwischen den drei völlig unterschiedlichen Menschen zunehmen, müssen sie sich zusammenraufen, um einen Ausweg aus ihrer misslichen Lage zu finden.
 <p>         
 </p>   
  <a href="https://123.vitaforas.de/smile.mp4">
