Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -178,7 +178,16 @@ Neu:
 
 Als der ehemalige Football-Star Jaycen „Two Js“ Jennings (Snoop Dogg) einen schweren Autounfall verursacht, wird er von einer Richterin zur Strafe zu gemeinnütziger Arbeit verdonnert. Jennings soll ein Junior-Football-Team trainieren, das ausschließlich aus Schülern aus problematischen Verhältnissen besteht. Darauf hat der vom Leben bisher verwöhnte Ex-Profi zunächst natürlich überhaupt keine Lust. Doch nachdem er seinen vorübergehenden neuen Job angetreten hat, wachsen ihm nach so mancher Startschwierigkeit die Kids immer mehr ans Herz und sein Werdegang scheint die lange benötigte Wende zu nehmen.
 
+<p>         
+</p>   
 
+ <a href="https://123.vitaforas.de/ted.mp4">
+<img src="https://123.vitaforas.de/ted.jpg" alt="26" width="100%" height="auto"></a>
+
+Ted - Staffel 1 / United States of America, 2024.
+<p>         
+</p>   
+Wir schreiben das Jahr 1993 und der Moment des Ruhms von Ted dem Bären (Seth MacFarlane) ist vorbei. Er lebt jetzt wieder zu Hause in Framingham, Massachusetts, zusammen mit seinem besten Freund, dem 16-jährigen John Bennett (Max Burkholder), sowie mit Johns Eltern Matty (Scott Grimes) und Susan (Alanna Ubach) und seiner Cousine Blaire (Giorgia Whigham). Ted mag einen schlechten Einfluss auf John haben, aber letztendlich ist er ein loyaler Kumpel, der immer bereit ist, für die Freundschaft etwas zu riskieren.
 <p>         
 </p>   
 
